--- a/index.html
+++ b/index.html
@@ -190,28 +190,28 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="image/IMG_5331.JPG" alt="">
+                <img src="image/bimo1.jpg" alt="">
                 <div class="content">
                     <h3>1</h3>
                 </div>
             </div>
 
             <div class="box">
-                <img src="image/IMG_5329.JPG" alt="">
+                <img src="image/bimo2.JPG" alt="">
                 <div class="content">
                     <h3>2</h3>
                 </div>
             </div>
 
             <div class="box">
-                <img src="image/IMG_5327.JPG" alt="">
+                <img src="image/bimo3.JPG" alt="">
                 <div class="content">
                     <h3>3</h3>
                 </div>
             </div>
 
             <div class="box">
-                <img src="image/IMG_5326.JPG" alt="">
+                <img src="image/bimo6.JPG" alt="">
                 <div class="content">
                     <h3>4</h3>
                 </div>
@@ -225,7 +225,7 @@
             </div>
 
             <div class="box">
-                <img src="image/IMG_5320.JPG" alt="">
+                <img src="image/bimo5.jpg" alt="">
                 <div class="content">
                     <h3>6</h3>
                 </div>
