--- a/index.html
+++ b/index.html
@@ -190,21 +190,21 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="/image/bimo1.jpg" alt="">
+                <img src="image/bimo1.jpg" alt="">
                 <div class="content">
                     <h3>1</h3>
                 </div>
             </div>
 
             <div class="box">
-                <img src="/image/bimo2.JPG" alt="">
+                <img src="image/bimo2.jpg" alt="">
                 <div class="content">
                     <h3>2</h3>
                 </div>
             </div>
 
             <div class="box">
-                <img src="/image/bimo3.JPG" alt="">
+                <img src="image/bimo3.jpg" alt="">
                 <div class="content">
                     <h3>3</h3>
                 </div>
@@ -218,14 +218,14 @@
             </div>
 
             <div class="box">
-                <img src="/image/bimo6.jpg" alt="">
+                <img src="image/IMG_5321.JPG" alt="">
                 <div class="content">
                     <h3>5</h3>
                 </div>
             </div>
 
             <div class="box">
-                <img src="/image/bimo5.jpg" alt="">
+                <img src="image/bimo5.jpg" alt="">
                 <div class="content">
                     <h3>6</h3>
                 </div>
