--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
 
             <div class="box">
-                <img src="/image/bimo6.JPG" alt="">
+                <img src="image/bimo6.JPG" alt="">
                 <div class="content">
                     <h3>4</h3>
                 </div>
